<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textViewWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/welcome" />
    
    <TextView
        android:id="@+id/textViewLoading"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_below="@id/textViewWelcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/loading" />

    <Button
        android:id="@+id/buttonChooseTemplate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewLoading"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:text="@string/choose_template" 
        android:onClick="clickChooseTemplate"/>

</RelativeLayout>